# oasr

./: .clang-format  .clangd  .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py
benchmarks/: README.md  __init__.py  bench_activation_kernels.py  bench_batch_norm.py  bench_bmm.py  bench_conv2d.py  bench_conv_block.py  bench_conv_kernels.py  bench_ctc_decoder.py  bench_depthwise_conv1d.py  bench_engine.py  bench_fft.py  bench_fmha.py  bench_gemm.py  bench_gemm_kernels.py  bench_gemm_log_softmax.py  bench_glu.py  bench_group_gemm.py  bench_group_norm.py  bench_layer_norm.py  bench_norm_kernels.py  bench_pointwise_conv1d.py  bench_rfft_power.py  bench_rms_norm.py  bench_service.py  bench_softmax.py  bench_swish.py  bench_topk.py  oasr_benchmark.py  utils.py
benchmarks/routines/: __init__.py  activation.py  attention.py  bench_utils.py  composite.py  conv.py  ctc_decoder.py  engine.py  feature.py  fft.py  gemm.py  gemm_log_softmax.py  norm.py  softmax.py  topk.py
benchmarks/testlists/: all_kernels.txt  conformer_base.txt
build_test/: oasr_tvm_ffi_intellisense_stub.cu
csrc/: activation.cu  activation_jit_binding.cu  bmm.cu  bmm_jit_binding.cu  conv.cu  conv2d.cu  conv2d_jit_binding.cu  conv_jit_binding.cu  ctc_decoder.cu  ctc_decoder_jit_binding.cu  cudnn_conv2d_kernel_launcher.cu  cudnn_conv2d_utils.h  features.cu  features_jit_binding.cu  fft.cu  fft_jit_binding.cu  gemm.cu  gemm_jit_binding.cu  gemm_log_softmax.cu  gemm_log_softmax_jit_binding.cu  group_gemm.cu  group_gemm_jit_binding.cu  norm.cu  norm_jit_binding.cu  softmax.cu  softmax_jit_binding.cu  topk.cu  topk_jit_binding.cu  tvm_ffi_utils.h
csrc/common/: allocator.h  cuda_utils.cpp  cuda_utils.h  tensor.h  types.h  vec_dtypes.h
csrc/decoder/: context_graph.cc  context_graph.h  ctc_greedy_search.cc  ctc_greedy_search.h  ctc_prefix_beam_search.cc  ctc_prefix_beam_search.h  ctc_wfst_beam_search.cc  ctc_wfst_beam_search.h  ctc_wfst_streaming_decoder.cc  ctc_wfst_streaming_decoder.h  search_interface.h
csrc/layers/: attention_layer.h  base_layer.h  conv_layer.h  encoder_layer.h  ffn_layer.h
csrc/pybind/: pybind_activation.h  pybind_conv.h  pybind_decoder.h  pybind_gemm.h  pybind_kernels.h  pybind_layers.h  pybind_main.cpp  pybind_norm.h  pybind_ops.h  pybind_tensor.h
csrc/templates/: bmm_cutlass_template.cu.jinja  bmm_cutlass_template_sm90.cu.jinja  conv2d_cutlass_template.cu.jinja  conv2d_cutlass_template_sm90.cu.jinja  gemm_cutlass_template.cu.jinja  gemm_cutlass_template_sm90.cu.jinja  group_gemm_cutlass_template.cu.jinja  group_gemm_cutlass_template_sm90.cu.jinja
docker/: Dockerfile
docker/common/: install.sh  install_k2.sh  install_pytorch.sh  install_rust.sh
docs/: autotuning.md  benchmarks.md  cache_manager.md  ctc_decoder_gpu.md  engine.md  engine_concurrency.md  known_issues.md  scheduler.md  serving.md
examples/recognize/: grpc_client.py  http_client.py
include/oasr/: activation.cuh  activation_dispatch.inc  ctc_decoder.cuh  features.cuh  fft.cuh  norm.cuh  norm_dispatch.inc  reduction.cuh  softmax.cuh  topk.cuh
oasr/: __init__.py  _server_cli.py  aot.py  attention.py  compilation_context.py  ctc_decode.py  decode.py  feature.py  fft.py  gemm.py  softmax.py  topk.py
oasr/cache/: __init__.py  attention_cache.py  block_pool.py  cnn_cache.py  ctc_state.py  paged_kv.py  slot_cnn.py  slot_pool.py  stream.py  types.py
oasr/decoder/: __init__.py  ctc_greedy_search.py  ctc_prefix_beam_search.py  ctc_wfst_beam_search.py  options.py  search_interface.py
oasr/engine/: __init__.py  config.py  engine.py  graph_cache.py  input_processor.py  model_runner.py  offline.py  output_processor.py  pipeline.py  request.py  scheduler.py
oasr/features/: __init__.py  backends.py  batched.py  config.py  gpu_fbank.py  streaming.py
oasr/jit/: activation.py  attention.py  conv.py  core.py  ctc_decoder.py  env.py  features.py  fft.py  gemm.py  softmax.py  topk.py
oasr/kernels/: __init__.py
rust/: Cargo.toml  README.md
rust/.cargo/: config.toml
rust/crates/oasr-asr/: Cargo.toml
rust/crates/oasr-asr/src/: audio.rs  lib.rs
rust/crates/oasr-core/: Cargo.toml
rust/crates/oasr-core/src/: lib.rs
rust/crates/oasr-engine-client/: Cargo.toml
rust/crates/oasr-engine-client/src/: client.rs  dispatcher.rs  handle.rs  lib.rs  pool.rs  pyengine.rs  router.rs
rust/crates/oasr-serve/: Cargo.toml
rust/crates/oasr-serve/src/: config.rs  lib.rs
rust/crates/oasr-server/: Cargo.toml
rust/crates/oasr-server-grpc/: Cargo.toml  build.rs
rust/crates/oasr-server-grpc/src/: lib.rs  speech.rs
rust/crates/oasr-server-http/: Cargo.toml
rust/crates/oasr-server-http/src/: lib.rs  offline.rs  recognize.rs  router.rs  whisper.rs  ws.rs
rust/crates/oasr-server/src/: config.rs  main.rs  worker_supervisor.rs
rust/crates/oasr-server/tests/: e2e_http_smoke.rs  e2e_smoke.rs
rust/crates/oasr-wire/: Cargo.toml
rust/crates/oasr-wire/src/: lib.rs
rust/proto/: oasr_asr.proto  oasr_speech_v1.proto
scripts/: README.md  analyze_asr_cutlass_configs.py  compile_hlg.py  compile_lg.py  fake_engine_worker.py  grpc_stream.py  make_kn_lm.py  prepare_bpe.py  prepare_char.py  prepare_lang.py  prepare_words.py  run_hlg.sh  ws_stream.py
tests/: CMakeLists.txt  conftest.py  test_activation.py  test_attention.py  test_autotune.py  test_autotune_api.py  test_cache_manager.py  test_cmvn.py  test_conformer.py  test_conv.cpp  test_conv.py  test_ctc_decoder_gpu.py  test_decoder.py  test_engine.py  test_engine_concurrent.py  test_extract_features.py  test_features.py  test_fft.py  test_fmha.py  test_fmha_varlen.py  test_gemm.py  test_gemm_log_softmax.py  test_jit.py  test_model_registry.py  test_norm.py  test_packing_encoder.py  test_pipeline.py  test_pipeline_preferred_batch.py  test_scheduler_length_batch.py  test_scheduler_preferred_batch.py  test_serving_worker.py  test_softmax.py  test_topk.py  test_tune.py  test_zipformer.py
tests/cpp/: CMakeLists.txt  test_attention.cpp  test_conv.cu  test_ffn.cpp  test_gemm.cu  test_norm.cu  test_norm_kernels.cu  test_tensor.cpp
(+193 files in other folders)
