[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "cmake>=3.18",
    "pybind11>=2.10",
    "ninja",
]
build-backend = "setuptools.build_meta"

[project]
name = "oasr"
version = "0.1.0"
description = "Open Automatic Speech Recognition - High-performance ASR inference framework"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "OASR Contributors"},
]
keywords = [
    "asr",
    "speech-recognition",
    "deep-learning",
    "cuda",
    "conformer",
    "paraformer",
    "transformer",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "numpy>=1.20.0",
    "apache-tvm-ffi>=0.1.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
audio = [
    "torchaudio>=0.12.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "kaldifeat>=1.22; python_version>='3.8'",
]
serving = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
wfst = [
    "k2>=1.24",
    "kaldilm",
]
all = [
    "oasr[audio,serving]",
]

[project.scripts]
oasr-server = "oasr.serving.server:main"

[project.urls]
Homepage = "https://github.com/your-org/oasr"
Documentation = "https://oasr.readthedocs.io"
Repository = "https://github.com/your-org/oasr"
Issues = "https://github.com/your-org/oasr/issues"

[tool.setuptools.packages.find]
include = ["oasr*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | third_party
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", "third_party", "build", "dist"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "third_party",
    "build",
    "dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function call in default argument
]
exclude = [
    ".git",
    "third_party",
    "build",
    "dist",
]
